# VideoDesigner

./: CMakeLists.txt  README.md  imagepro.cpp  imagepro.h  main.cpp  videodeisgnerwindow.ui  videodesignerwindow.cpp  videodesignerwindow.h  videodesignerwindow.ui  videofilter.cpp  videofilter.h  videothread.cpp  videothread.h  videowidget.cpp  videowidget.h
